# patterns

./: pyproject.toml
examples/structural/: repository.py
patterns/creational/: builder.py  prototype.py
patterns/structural/: composite.py  repository.py
tests/creational/: conftest.py  test_builder.py  test_prototype.py
tests/structural/: conftest.py  test_composite.py  test_repository.py
